--- a/force-app/infrastructure/apex-extensions/main/application/dynamic/classes/fflib_AppBindingsSelector.cls
+++ b/force-app/infrastructure/apex-extensions/main/application/dynamic/classes/fflib_AppBindingsSelector.cls
@@ -28,7 +28,7 @@
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-public virtual without sharing class fflib_AppBindingsSelector extends fflib_SObjectSelector
+public virtual inherited sharing  class fflib_AppBindingsSelector extends fflib_SObjectSelector
 {
 	// Used for mocking
 	@TestVisible
