--- a/force-app/main/default/classes/PaymentServicesConfigurationSelector.cls
+++ b/force-app/main/default/classes/PaymentServicesConfigurationSelector.cls
@@ -34,7 +34,7 @@
 * @description Selector class for Payment Services Configuration
 */
 
-public without sharing class PaymentServicesConfigurationSelector {
+public inherited sharing  class PaymentServicesConfigurationSelector {
 
    public List<Payment_Services_Configuration__c> getConfigRecordsByName(List<String> serviceNames) {
       return [
