--- a/force-app/main/default/classes/RD2_ScheduleService.cls
+++ b/force-app/main/default/classes/RD2_ScheduleService.cls
@@ -35,7 +35,7 @@
 *
 */
 
-public without sharing class RD2_ScheduleService {
+public inherited sharing  class RD2_ScheduleService {
 
     /**
     * @description Date unit conversion factor for Recurring Donation weekly period
@@ -1070,7 +1070,7 @@ public without sharing class RD2_ScheduleService {
     /***
     * @description Handles Pause Recurring Donation functionality
     */
-    public class PauseScheduleHandler {
+    public inherited sharing class PauseScheduleHandler {
 
         public RecurringDonationSchedule__c createPauseSchedule(String statusReason, Date startDate, Date endDate, Id rdId) {
             return new RecurringDonationSchedule__c(
