--- a/force-app/main/default/classes/UTIL_Currency.cls
+++ b/force-app/main/default/classes/UTIL_Currency.cls
@@ -33,7 +33,7 @@
 * @group Utilities
 * @description Utilities for working with currencies
 */
-public without sharing class UTIL_Currency implements UTIL_Currency.Interface_x {
+public inherited sharing  class UTIL_Currency implements UTIL_Currency.Interface_x {
     
     public static final String CURRENCY_ISO_CODE_FIELD = 'CurrencyIsoCode';
 
