Suggested by Clayton FixBot for [main (f049983)] and rule [ApexNoSharing]

--- a/force-app/main/default/classes/BDI_DataImport_BATCH.cls
+++ b/force-app/main/default/classes/BDI_DataImport_BATCH.cls
@@ -37,7 +37,7 @@
 * Batch process looks for all DataImport records that need to be processed
 *
 */
-public class BDI_DataImport_BATCH implements Database.Batchable<sObject> {
+public inherited sharing class BDI_DataImport_BATCH implements Database.Batchable<sObject> {
 
     /*******************************************************************************************************
     * @description instance of the data import service
